# expectorate

./: .gitignore  LICENSE  MANIFEST.in  README.md  anaconda-project.yml  environment.yml  setup.cfg  setup.py
src/expectorate/: cli.py  context.py  generate.py
src/expectorate/lsp/: cli.py  generate.py
src/expectorate/lsp/templates/: protocol-schema.ts.j2
src/expectorate/tests/: conftest.py  test_cli.py  test_cli_lsp.py  test_lsp_cli.py
src/expectorate/tests/fixtres/fixtures/lsp/: 00_good_init.yaml
src/expectorate/tests/fixtures/lsp/: 00_good_init.yaml
src/expectorate/tests/lsp/: test_cli.py
src/lsp_json_schema/: api.py  cli.py  constants.py  conventions.py  spec_compat.py  utils.py
src/lsp_json_schema/templates/: protocol-schema.ts.j2
src/lsp_json_schema/tests/: test_cli.py
