[metadata]
name = lsp-json-schema
description =
    Generates JSON Schema from the Language Server Protocol spec and reference implementation
long_description = file: ./py_src/jupyter_lsp/README.md
long_description_content_type = text/markdown
url = https://github.com/deathbeds/lsp-json-schema
author = lsp-json-schema Contributors
license = BSD-3-Clause
keywords =
    Interactive
    Language Server
    LSP
license_file = LICENSE
classifiers =
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    License :: OSI Approved :: BSD License
    Programming Language :: Python

[options]
package_dir =
    = src

packages = find:
include_package_data = True
zip_safe = False

install_requires =
    jsonschema
    pandas

tests_require =
    pytest
    hypothesis-jsonschema
    hypothesis

[options.packages.find]
where =
    src

[options.entry_points]
console_scripts =
    lsp-json-schema = lsp_json_schema.cli:cli

[flake8]
exclude = .git,__pycache__,envs,.ipynb_checkpoints,.mypy_cache
max-line-length = 88
ignore = E203,W503

[tool:pytest]
junit_family=xunit2
addopts =
    --pyargs lsp_json_schema
    --cov lsp_json_schema
    --cov-report term-missing:skip-covered
    -p no:warnings
    --flake8
    --black
    --isort
    --mypy

[isort]
combine_as_imports = True
include_trailing_comma = True
line_length = 88
multi_line_output = 3

[pycodestyle]
ignore = E203,W503,C0330
max-line-length = 88

[mypy]
check_untyped_defs = True
no_implicit_optional = True

[mypy-pandas]
ignore_missing_imports = True

[mypy-pyemojify]
ignore_missing_imports = True
